--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,12 @@ yarn-error.log*
 
 # local env files
 .env.local
+.env.local.example
+.env.local.bak
 .env.development.local
 .env.test.local
 .env.production.local
 
 # vercel
 .vercel
+test.json
